--- a/index.html
+++ b/index.html
@@ -1,25 +1,75 @@
 <!DOCTYPE html>
+
 <html>
-<head>
-	  <meta charset="UTF-8">
-	  	<title>My Portfolio</title>
-	<link rel="stylesheet" type="text/css" href="style.css">
-	<link href="https://fonts.googleapis.com/css?family=Lobster" rel="stylesheet">
+
+	<head>
+	<title>My Portfolio</title>
+
+	<link rel="stylesheet" href="assets/css/reset.css">
+
+		<style> 
+					.TextWrap {
+
+				float: left;
+
+				margin: 10px;
+			}
+
+
+		</style>
 </head>
 <body>
-	  <header>
-    Heidy Palacios
-  </header>
+		<header>
 
-	  <h1>About Me</h1>
+			<section id="header">	
 
-	    <a href="https://github.com/Heidycpp">github</a>
+			 <aside>Heidy Palacios</aside>
 
-	     <img src="https://i.pinimg.com/236x/04/af/2f/04af2fa60cfe10441739321fac934e86--girls-in-glasses-hipster-glasses.jpg">
-	<p>I am a soon to be 40 year old that decided to make a big chang in my life.
-	I always liked desining and creating things and combining technology into it is even more appealing to me.</p>
-	<p>I love music, I cannot go a day without having music in my life.
-	</p>
+			  <nav>
+			  	  <a href="index.html">About</a>
+      			  <a href="portfolio.html">Portfolio</a>
+      			  <a href="contact.html">Contact</a>
+      		  </nav>
 
-</body>
+			</section>
+
+		</header>
+
+		<section id= "section-left">
+
+		<h2>About Me</h2>
+
+		<p>			
+
+			<img src="assets/images/IMG_0131 (2).JPG" height= "200px" width= "200px" class= "TextWrap">
+			
+				My Name is Heidy Palacios. I am a soon to be 40-year-old that decided to make a big change in my life. I always liked designing and creating things and combining technology into it is even more appealing to me. Since I was in my 20s I always liked creating videos and editing them, I find the whole process rewarding and that led me to be curious about building websites and/or editing them. </p>
+				<br>
+				<p>As I got older my interest grew but my circumstances did not allow me to peruse my curiosity when I was younger due to family responsibilities. This will be a difficult journey but one that I look forward to embarking on and learn as much as I can through my journey. I look forward to the challenges as they can only help me get better.
+
+				</p>
+			</section>
+
+		<section id= "section-right">
+
+			<h3>Connect with Me</h3>
+			<div>
+				
+			<a href="https://github.com/Heidycpp"><img src="assets/images/github.ico" height= "50px" width= "50px"></a>
+
+			<a href="https://www.linkedin.com/in/heidy-palacios-48734ba4/"><img src="assets/images/linkedin.ico" height= "50px" width= "50px"></a>
+
+			<a href="https://stackoverflow.com/users/8656258/h-palacios"><img src="assets/images/stackoverflow.ico" height= "50px" width= "50px"></a>
+
+		</div>
+		</section> 
+
+		<footer>
+
+			&copy;Copyright2017 Heidy Palacios
+
+		</footer>
+
+	</body>
+
 </html>
