--- a/portfolio.html
+++ b/portfolio.html
@@ -1,51 +1,35 @@
 <!DOCTYPE html>
 <html lang="en-us">
 <head>
-
 	<title>My Portfolio</title>
-
-	<link rel="stylesheet" href="assets/css/reset.css">
-	
+	<link rel="stylesheet" type="text/css" href="assets/css/style.css">
+	  <header>
+    <section id="header">
+      <aside>Heidy Palacios</aside>
+      <nav>
+        <a href="index.html">About</a>
+        <a href="portfolio.html">Portfolio</a>
+        <a href="contact.html">Contact</a>
+      </nav>
+    </section>
+  </header>
 </head>
 <body>
-
-   <header>
-    <section id="header">
-	<aside>Heidy Palacios</aside>
-
-			<nav>
-				<a href="index.html">About</a>
-				<a href="portfolio.html">Portfolio</a>
-				<a href="contact.html">Contact</a>
-			</nav>
-		</section>
-	</header>
-
-		<section id= "section-left">
-					<h2> Portfolio </h2>
-						</section>
-
+	<section id= "section-left">
+		<h2>Portfolio</h2>
+		
+	</section>
+	<!--thumbnails-->
 	<section id= "section-right">
-
-			<h3>Connect with Me</h3>
-
-			<div>
-
-        <a href="https://github.com/Heidycpp"><img src="assets/images/github.ico" height= "50px" width= "50px"></a>
-
-        <a href="https://www.linkedin.com/in/heidy-palacios-48734ba4/"><img src="assets/images/linkedin.ico" height= "50px" width= "50px"></a>
-
-        <a href="https://stackoverflow.com/users/8656258/h-palacios"><img src="assets/images/stackoverflow.ico" height= "50px" width= "50px"></a>
-
-    </div> 
-</section>
-
-		<footer>
-
-			&copy;Copyright2017 Heidy Palacios
-
-		</footer>
-
+		<h3>Connect With Me</h3>
+		<div>
+			<a href="https://github.com/Heidycpp"><img src="assets/images/github.png" alt="git" width="70" height="70" border="0">
+				<a href="https://www.linkedin.com/in/heidy-palacios-48734ba4/"><img src="assets/images/linkedin.jpg" alt="linked"
+					width="70" height="70" border="0"></a>
+					<a href="https://stackoverflow.com/users/8656258/h-palacios"><img src="assets/images/stackoverflow.png" alt="stack" width="70" height="70" border="0"></a>
+		</div>
+	</section>
+	<!--footer-->
+	<footer>&copy;Copyright2017 Heidy Palacios</footer>
 </body>
-
 </html>
