--- a/contact.html
+++ b/contact.html
@@ -6,7 +6,7 @@
     <header>
     <section id="header">
       <aside>Heidy Palacios</aside>
-      <nav>
+      <nav class="nav">
         <a href="index.html">About</a>
         <a href="portfolio.html">Portfolio</a>
         <a href="contact.html">Contact</a>
