--- a/portfolio.html
+++ b/portfolio.html
@@ -6,7 +6,7 @@
 	  <header>
     <section id="header">
       <aside>Heidy Palacios</aside>
-      <nav>
+      <nav class="nav">
         <a href="index.html">About</a>
         <a href="portfolio.html">Portfolio</a>
         <a href="contact.html">Contact</a>
@@ -17,8 +17,42 @@
 <body>
 	<section id= "section-left">
 		<h2>Portfolio</h2>
-		
-	</section>
+		<section id="left">
+		<div class="portfolio-item">
+				<a href="#">
+			<img src="assets/images/Bowl.JPG" alt="hangman" height= "350px" width= "300px" border="0"><h4 class="item-name">Hangman</h4><br>
+		</a>
+	</div><br>
+</section>
+		<section id="right">
+		<div class="portfolio-item">
+			<a href="#">
+			<img src="assets/images/game.JPG" alt="RPG Game" height= "350px" width= "300px" border="0"><h4 class="item-name">RPG Game</h4><br>
+		</a>
+	</div><br>
+</section>
+			<section id="left">
+			<div class="portfolio-item">
+			<a href="#">
+			<img src="assets/images/who.JPG" alt="Trivia Game" height= "300px" width= "400px" border="0"><h4 class="item-name">Trivia Game</h4><br>
+		</a>
+	</div><br>
+</section>
+        <section id="right">
+			<div class="portfolio-item">
+			<a href="#">
+			<img src="assets/images/retromix.JPG" alt="Rutgers Info Widget" height= "350px" width= "300px" border="0"><h4 class="item-name">Rutgers Info Widget</h4><br>
+		</a>
+	</div><br>
+</section>
+			<section id="left">
+			<div class="portfolio-item">
+			<a href="#">
+			<img src="assets/images/retro.JPG" alt="Rock Paper Scissors" height= "350px" width= "300px" border="0"><h4 class="item-name">Rock Paper Scissors</h4><br>
+		</a>
+	</div>
+</section>
+</section>
 	<!--thumbnails-->
 	<section id= "section-right">
 		<h3>Connect With Me</h3>
